# reddit-Insight

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-ROADMAP.md  v2.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-reddit-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-web-scraping/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-data-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-trend-analysis/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md
.planning/phases/06-demand-discovery/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-competitive-analysis/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
.planning/phases/08-business-insights/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md
.planning/phases/09-web-dashboard/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md
.planning/phases/10-report-polish/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md
.planning/phases/11-advanced-analytics/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md
.planning/phases/12-dashboard-data-integration/: 12-01-PLAN.md  12-01-SUMMARY.md
.planning/phases/13-recent-analyses/: 13-01-PLAN.md  13-01-SUMMARY.md
.planning/phases/14-trend-prediction-ui/: 14-01-PLAN.md  14-01-SUMMARY.md
data/: analysis_results.json  reddit_insight.db
docs/: api-guide.md  api-reference.md  architecture.md  cli-reference.md  dashboard-guide.md  getting-started.md  user-guide.md  v2-features.md
src/reddit_insight/: __init__.py  cli.py  config.py  data_source.py  logging.py
tests/: __init__.py  conftest.py  test_analysis.py  test_collectors.py  test_competitive.py  test_data_source.py  test_demand.py  test_e2e.py  test_integration.py  test_pipeline.py
tests/alerts/: __init__.py  test_manager.py  test_notifiers.py
tests/analysis/: test_comparison.py
tests/dashboard/: __init__.py  test_anomaly_service.py  test_cache_service.py  test_cluster_service.py  test_comparison_service.py  test_data_integration.py  test_llm_service.py  test_prediction_service.py  test_topic_service.py
tests/e2e/: __init__.py  test_api_integration.py  test_dashboard_flow.py  test_error_handling.py  test_v2_features.py
tests/fixtures/: expected_demands.json  expected_trends.json  sample_comments.json  sample_posts.json
tests/llm/: __init__.py  test_analyzer.py  test_cache.py  test_client.py  test_prompts.py  test_rate_limiter.py
tests/performance/: __init__.py  test_dashboard_perf.py  test_v2_perf.py
tests/reports/: __init__.py  test_excel_generator.py  test_pdf_generator.py
tests/streaming/: test_monitor.py
(+197 files in other folders)
